# robot-gitee-openeuler-welcome

./: BUILD.bazel  README.md  WORKSPACE  build.sh  config.go  go.mod  go.sum  main.go  robot.go  sig.go  sig_info.go
.github/workflows/: reviewcode.yaml
community/: BUILD.bazel  repos.go
